[gd_scene load_steps=11 format=3 uid="uid://dy1m8i8ptvjsb"]

[ext_resource type="PackedScene" uid="uid://bbndmbbnbuwpi" path="res://nodes/levels/level.tscn" id="1_3o6gg"]
[ext_resource type="Script" path="res://nodes/levels/first_level.gd" id="2_se2ei"]
[ext_resource type="PackedScene" uid="uid://bfltea4btd7tw" path="res://nodes/vehicles/ambulance_vehicle.tscn" id="3_m16yj"]

[sub_resource type="Curve2D" id="Curve2D_i7ytv"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 180, -90, 0, 0, 0, 0, 120, -90, 0, 0, 0, 0, 60, -90, 0, 0, 0, 0, 0, -90, 0, 0, 0, 0, -60, -90, 0, 0, 0, 0, -120, -90, 0.151036, -30.052, -0.151036, 30.052, -151, -60, 0, 0, 0, 0, -150, 0, 0, 0, 0, 0, -150, 30, 0, -31.7891, 0, 31.7891, -150, 58, 0, 0, 0, 0, -180, 90)
}

[sub_resource type="Curve2D" id="Curve2D_yei81"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -150, -60, -29.6985, 0, 29.6985, 0, -120, -30, 0, 0, 0, 0, -61, -30, 0, 0, 0, 0, 0, -30, 0, 0, 0, 0, 60, -30, 0, 0, 0, 0, 120, -30, 0, 0, 0, 0, 180, -30)
}

[sub_resource type="Curve2D" id="Curve2D_rumi3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -150, 0, -30.052, 0.353553, 30.052, -0.353553, -120, 30, 0, 0, 0, 0, -60, 30, 0, 0, 0, 0, -1, 30, 0, 0, 0, 0, 60, 30, 0, 0, 0, 0, 120, 30, 0, 0, 0, 0, 180, 30)
}

[sub_resource type="Curve2D" id="Curve2D_wr1qa"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -150, 58, -29.6985, 0, 29.6985, 0, -120, 90, 0, 0, 0, 0, -61, 90, 0, 0, 0, 0, 0, 90, 0, 0, 0, 0, 59, 90, 0, 0, 0, 0, 120, 90, 0, 0, 0, 0, 180, 90)
}

[sub_resource type="CircleShape2D" id="CircleShape2D_v43gx"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ldkvd"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_i018n"]
radius = 15.0

[node name="FirstLevel" instance=ExtResource( "1_3o6gg" )]
script = ExtResource( "2_se2ei" )
__meta__ = {
"_edit_horizontal_guides_": [-30.0, -60.0, -90.0, 30.0, 58.0, 90.0, 120.0],
"_edit_vertical_guides_": [-30.0, -60.0, -90.0, -120.0, -150.0, -180.0, 30.0, 60.0, 90.0, 120.0, 150.0, 180.0, 210.0]
}
vehicles = [ExtResource( "3_m16yj" )]

[node name="Paths" type="Node2D" parent="." index="0"]

[node name="Entrance" type="Path2D" parent="Paths" index="0"]
curve = SubResource( "Curve2D_i7ytv" )

[node name="Top" type="Path2D" parent="Paths" index="1"]
curve = SubResource( "Curve2D_yei81" )

[node name="Middle" type="Path2D" parent="Paths" index="2"]
curve = SubResource( "Curve2D_rumi3" )

[node name="Bottom" type="Path2D" parent="Paths" index="3"]
curve = SubResource( "Curve2D_wr1qa" )

[node name="Turns" type="Node2D" parent="." index="1"]

[node name="Top" type="Area2D" parent="Turns" index="0"]
collision_layer = 2

[node name="Indicator" type="ColorRect" parent="Turns/Top" index="0"]
offset_left = -150.0
offset_top = -60.0
offset_right = -120.0
offset_bottom = -30.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Collider" type="CollisionShape2D" parent="Turns/Top" index="1"]
position = Vector2(-135, -45)
shape = SubResource( "CircleShape2D_v43gx" )

[node name="Middle" type="Area2D" parent="Turns" index="1"]
collision_layer = 2

[node name="Indicator" type="ColorRect" parent="Turns/Middle" index="0"]
offset_left = -150.0
offset_right = -120.0
offset_bottom = 30.0
mouse_filter = 2

[node name="Collider" type="CollisionShape2D" parent="Turns/Middle" index="1"]
position = Vector2(-135, 15)
shape = SubResource( "CircleShape2D_ldkvd" )

[node name="Bottom" type="Area2D" parent="Turns" index="2"]
collision_layer = 2

[node name="Indicator" type="ColorRect" parent="Turns/Bottom" index="0"]
offset_left = -150.0
offset_top = 60.0
offset_right = -120.0
offset_bottom = 90.0
mouse_filter = 2

[node name="Collider" type="CollisionShape2D" parent="Turns/Bottom" index="1"]
position = Vector2(-135, 75)
shape = SubResource( "CircleShape2D_i018n" )

[node name="VehicleSpawnTimer" type="Timer" parent="." index="2"]
wait_time = 5.0
autostart = true

[connection signal="area_entered" from="Turns/Top" to="." method="_on_top_area_entered"]
[connection signal="input_event" from="Turns/Top" to="." method="_on_top_input_event"]
[connection signal="area_entered" from="Turns/Middle" to="." method="_on_middle_area_entered"]
[connection signal="input_event" from="Turns/Middle" to="." method="_on_middle_input_event"]
[connection signal="area_entered" from="Turns/Bottom" to="." method="_on_bottom_area_entered"]
[connection signal="input_event" from="Turns/Bottom" to="." method="_on_bottom_input_event"]
[connection signal="timeout" from="VehicleSpawnTimer" to="." method="_on_vehicle_spawn_timer_timeout"]
